add_library(d3d9 INTERFACE
	Include/D2D1.h
	Include/D3DX10core.h
	Include/DXGIFormat.h
	Include/comdecl.h
	Include/d3dx9shader.h
	Include/rmxftmpl.h
	Include/D2D1Helper.h
	Include/D3DX10math.h
	Include/DXGIType.h
	Include/d3d10misc.h
	Include/d3dx9shape.h
	Include/rpcsal.h
	Include/D2DBaseTypes.h
	Include/D3DX10math.inl
	Include/Dcommon.h
	Include/d3d10sdklayers.h
	Include/d3dx9tex.h
	Include/xact3.h
	Include/D2Derr.h
	Include/D3DX10mesh.h
	Include/DxErr.h
	Include/d3d9.h
	Include/d3dx9xof.h
	Include/xact3d3.h
	Include/D3D10.h
	Include/D3DX10tex.h
	Include/PIXPlugin.h
	Include/d3d9caps.h
	Include/dinput.h
	Include/xact3wb.h
	Include/D3D10_1.h
	Include/D3DX11.h
	Include/X3DAudio.h
	Include/d3d9types.h
	Include/dinputd.h
	Include/xma2defs.h
	Include/D3D10_1shader.h
	Include/D3DX11async.h
	Include/XAPO.h
	Include/d3dx10async.h
	Include/dsconf.h
	Include/xnamath.h
	Include/D3D10effect.h
	Include/D3DX11core.h
	Include/XAPOBase.h
	Include/d3dx9.h
	Include/dsetup.h
	Include/xnamathconvert.inl
	Include/D3D10shader.h
	Include/D3DX11tex.h
	Include/XAPOFX.h
	Include/d3dx9anim.h
	Include/dsound.h
	Include/xnamathmatrix.inl
	Include/D3D11.h
	Include/D3DX_DXGIFormatConvert.inl
	Include/XAudio2.h
	Include/d3dx9core.h
	Include/dxdiag.h
	Include/xnamathmisc.inl
	Include/D3D11SDKLayers.h
	Include/D3Dcommon.h
	Include/XAudio2fx.h
	Include/d3dx9effect.h
	Include/dxfile.h
	Include/xnamathvector.inl
	Include/D3D11Shader.h
	Include/D3Dcompiler.h
	Include/XDSP.h
	Include/d3dx9math.h
	Include/dxsdkver.h
	Include/D3DCSX.h
	Include/DWrite.h
	Include/XInput.h
	Include/d3dx9math.inl
	Include/gameux.h
	Include/D3DX10.h
	Include/DXGI.h
	Include/audiodefs.h
	Include/d3dx9mesh.h
	Include/rmxfguid.h
)

target_include_directories(d3d9 INTERFACE
	${CMAKE_CURRENT_BINARY_DIR}/Include
)
